FISH-6432 Applications Take Longer To Deploy on JDK 17
Signed-off-by: Gaurav Gupta <gaurav.gupta@payara.fish>